--- a/Login/index.html
+++ b/Login/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <div class="login">
-        <h2 class="bounce">Login or Register to play Who Wants To Be A Millionaire!</h2>
+        <h2 class="bounce">Enter your username to play Who Wants To Be A Millionaire!</h2>
         <form method="post" action="login.php">
             <input type="text" name="username" placeholder="Enter Username" required>
             <button type="submit">Enter</button>
